# pmf-acls-docs

./: .gitignore  .readthedocs.yaml  ADVERSARIAL_REVIEW_RESPONSE.md  Makefile  REVIEW_RESPONSE.md  methodological_review_3_28.md  pmf-acls-docs_adversarial_review.md  pmf-acls-docs_review.md  pyproject.toml
docs/: changelog.md  conf.py  index.md  installation.md  quickstart.md  references.bib
docs/api/: bayesian.md  core.md  data_structures.md  diagnostics.md  index.md  uncertainty.md
docs/guides/: algorithms.md  bayesian.md  compositional.md  factor_selection.md  rotation.md  uncertainty.md  why_error_weighting.md
docs/notebooks/: basic_pmf.ipynb  bayesian_demo.ipynb  cross_algorithm_comparison.md  index.md  marimo_bayesian.md  marimo_compositional.md  marimo_examples.md  marimo_getting_started.md
docs/notebooks/marimo/: 01_basic_example.py  02_factor_selection.py  03_data_preparation.py  04_complete_workflow.py  05_bayesian_demo.py  06_pcb_hierarchical_demo.py  07_shrinkage_exploration.py  08_robust_outlier_demo.py  09_volume_prior_demo.py  10_ard_pruning_demo.py  11_informative_prior_demo.py  12_disp_demo.py  13_compositional_demo.py  14_simplex_pmf_demo.py  15_aitchison_nmf_demo.py
